@@ -6,6 +6,8 @@
 Version 1.4.4 - CVS
 -------------------
   - Fix listcommands plugin to include src/ in compose links.
+  - Fix listcommands plugin to behave like normal reply/compose
+    links, and return to message page that originally called from.
   
 Version 1.4.4 RC1 - 31 December 2004
 ------------------------------------
